[package]
name = "iq_dump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
strum = { version = "0.27.2", features = ["derive"] }
num-complex = "0.4.6"
simple_logger = "5.1.0"
rust_xlsxwriter = "0.92.2"
rustfft = "6.4.1"
pyo3 = { version = "0.27.2", features = ["extension-module"]}
walkdir = "2.5.0"

[lib]
name = "iq_dump"
crate-type = ["cdylib"]